*  物料计划 ID => 采购计划 ID

--- a/core/app/views/CheckTasks/_showTask.html
+++ b/core/app/views/CheckTasks/_showTask.html
@@ -29,7 +29,7 @@
     </a>
   </td>
 
-  <th>物料计划 ID</th>
+  <th>采购计划 ID</th>
   <td>
     <a href="/ProcureUnits/index?p.search=id:${check.units?.id}" target="_blank">
     ${check.units?.id}
