--- a/core/app/views/InboundRecords/blank.html
+++ b/core/app/views/InboundRecords/blank.html
@@ -37,7 +37,7 @@
     </td>
   </tr>
   <tr>
-    <th>物料采购ID</th>
+    <th>采购计划ID</th>
     <td colspan="3">
       <input type="text" name="record.procureunitId" value="${record.procureunitId}" class="input-block-level">
     </td>
