--- a/core/app/views/OutboundRecords/index.html
+++ b/core/app/views/OutboundRecords/index.html
@@ -89,7 +89,7 @@
           <th rowspan="2" style="width:30px;">ID</th>
           <th rowspan="2" style="width:60px;">出库类别</th>
           <th rowspan="2" style="width:50px;">状态</th>
-          <th rowspan="2" style="width:40px;">物料采购 ID</th>
+          <th rowspan="2" style="width:40px;">采购计划ID</th>
           <th rowspan="2" style="width:120px;">SKU</th>
           <th rowspan="2" style="width:110px;">产品名称</th>
           <th rowspan="2" style="width:100px;">FBA</th>
