--- a/core/app/views/CheckTasks/checklist.html
+++ b/core/app/views/CheckTasks/checklist.html
@@ -95,7 +95,7 @@
         <th>操作</th>
         <th>收货记录</th>
         <th>收货数量</th>
-        <th>物料计划</th>
+        <th>采购计划</th>
         <th>SKU</th>
         <th>产品名称</th>
         <th>FnSku</th>
