*  修正 confirm_form 提交信息过多导致 play 解析参数失败的异常

--- a/core/app/views/OutboundRecords/index.html
+++ b/core/app/views/OutboundRecords/index.html
@@ -78,7 +78,7 @@
     </div>
   </form>
 
-  <form action="@{OutboundRecords.confirm()}" name="confirm_form">
+  <form action="javascript:void(0)" name="confirm_form">
     <div class="span12" style="overflow: auto;">
       <table class="table table-condensed table-bordered" style="width:2700px;">
         <tr>
