--- a/core/app/views/OutboundRecords/index.html
+++ b/core/app/views/OutboundRecords/index.html
@@ -128,7 +128,6 @@
       #{list items: records, as: 'r'}
         <tr>
             #{set attrs: r.stockObj.attributes()/}
-            #{set unit_maps: r.stockObj.unitMaps()/}
           <td>
             <label class="checkbox">
               <input type="checkbox" name="rids" value="${r.id}" class="outboundrecord">
@@ -230,8 +229,21 @@
                 #{/list}
             </select>
           </td>
-          <td>${unit_maps.get("unit")?.cooperator?.name}</td>
-          <td>${unit_maps.get("inboundRecord")?.id}</td>
+            #{set receiveRecord: r.receiveRecord()/}
+          <td>
+              #{if receiveRecord != null && receiveRecord.procureUnit != null}
+                <a href="@{Cooperators.show(receiveRecord.procureUnit?.cooperator?.id)}" target="_blank">
+                ${receiveRecord.procureUnit?.cooperator?.name}
+                </a>
+              #{/if}
+          </td>
+          <td>
+              #{if receiveRecord != null}
+                <a href="/ReceiveRecords/index?p.search=id:${receiveRecord.id}" target="_blank">
+                ${receiveRecord.id}
+                </a>
+              #{/if}
+          </td>
           <td>${r.createDate.datetime()}</td>
           <td>${r.outboundDate.datetime()}</td>
           <td>
