--- a/core/app/views/ShipPlans/_form.html
+++ b/core/app/views/ShipPlans/_form.html
@@ -4,7 +4,7 @@
 
   <th><span style="color:red">*</span>Selling ID</th>
   <td>
-    <input type="text" value="${plan.selling?.sellingId}" name="plan.selling.sellingId" required>
+    <input type="text" value="${plan.selling?.sellingId}" name="plan.selling.sellingId" required autocomplete="off">
   </td>
 </tr>
 <tr>
