--- a/core/app/views/ShipPlans/index.html
+++ b/core/app/views/ShipPlans/index.html
@@ -76,8 +76,9 @@
               <input type="checkbox" id="plan_checkbox_all" class="plan checkall">
             </label>
           </th>
-          <th style="width:40px;">#</th>
+          <th>#</th>
           <th>状态</th>
+          <th>操作</th>
           <th>Selling</th>
           <th>Sku</th>
           <th style="width:10%;">产品名称</th>
@@ -105,6 +106,14 @@
           </td>
           <td>${plan.state.label()}</td>
           <td>
+            #{if plan.state.name()=='Pending'}
+              <a href="@{ShipPlans.show(plan.id)}" target="_blank" class="btn btn-mini btn-primary">修改</a>
+            #{/if}
+            #{else }
+              <a href="@{ShipPlans.show(plan.id)}" target="_blank" class="btn btn-mini btn-info">查看</a>
+            #{/else}
+          </td>
+          <td>
             <a href="@{Sellings.selling(plan.selling?.sellingId)}" target="_blank">${plan.selling?.sellingId}</a>
           </td>
           <td>
@@ -129,14 +138,8 @@
           <td>${plan.qty}</td>
           <td>#{time_tooltip time:plan.planShipDate/}</td>
           <td>#{time_tooltip time:plan.planArrivDate/}</td>
-          <td>
-            <dl>
-                #{list items:plan.relateShipment(), as:'sp'}
-                  <li><a href="@{Shipments.show(sp.id)}">${sp}</a></li>
-                #{/list}
-            </dl>
-          </td>
-          <td>${plan.shipType.label()}</td>
+          <td><a href="@{Shipments.show(plan.shipment.id)}">${plan.shipment.id}</a></td>
+          <td>${plan.shipType?.label()}</td>
           <td>#{time_tooltip time:plan.createDate/}</td>
           <td>${plan.creator?.username}</td>
         </tr>
