*  取消采购计划关联上运输单 *  创建出货计划的时候使用采购计划存储的运输单 ID 来关联上运输单

--- a/core/app/views/ProcureUnits/_unit_table_trs.html
+++ b/core/app/views/ProcureUnits/_unit_table_trs.html
@@ -97,7 +97,7 @@
     <textarea rows="8" class="span12" name="unit.comment" id="memo">${unit.comment.raw()}</textarea>
   </td>
 </tr>
-
+<input type="hidden" name="unit.shipmentId" value="${unit.shipmentId}">
 <input type="hidden" name="to_page" value="#{if sid} analysis #{/if} #{else } index #{/else}">
 
 
