--- a/core/app/views/DeliverPlans/index.html
+++ b/core/app/views/DeliverPlans/index.html
@@ -49,7 +49,7 @@
     </div>
 
     <div class="inline">
-      <a class="btn btn-success" data-url="@{DeliverPlans.triggerReceiveRecords()}" name="triggerReceiveRecordsBtn">确认发货</a>
+      <a class="btn btn-success" data-url="@{DeliverPlans.confirm()}" name="triggerReceiveRecordsBtn">确认发货</a>
     </div>
   </div>
 </div>
