--- a/core/app/views/OutboundRecords/blank.html
+++ b/core/app/views/OutboundRecords/blank.html
@@ -94,7 +94,7 @@
       <input type="text" name="record.fba" value="${record.fba}">
     </td>
 
-    <th>产品条码</th>
+    <th>SKU</th>
     <td>
       <input type="text" name="record.productCode" value="${record.productCode}">
     </td>
