运输单页面调整已经采购计划分拆页面查询不到运输单问题

--- a/core/app/views/ProcureUnits/_splitOnSelling.html
+++ b/core/app/views/ProcureUnits/_splitOnSelling.html
@@ -37,7 +37,7 @@
 <tr>
   <th><span style="color:red">*</span>预计交货时间</th>
   <td>
-    <input type="date" name="newUnit.attrs.planDeliveryDate" value="${newUnit.attrs.planDeliveryDate.date()}" required>
+    <input type="date" id="planDeliveryDate" name="newUnit.attrs.planDeliveryDate" value="${newUnit.attrs.planDeliveryDate.date()}" required>
   </td>
   <th>去往仓库</th>
   <td>
