--- a/core/app/views/Shipments/index.html
+++ b/core/app/views/Shipments/index.html
@@ -30,10 +30,10 @@
       #{/list}
       </select>
 
-      <select name="p.type" style="width: 100px;" class="inline selectize">
+      <select name="p.type" style="width: 150px;" class="inline selectize">
         <option value="">运输方式</option>
       #{list items:models.procure.Shipment.T.values(), as:'t'}
-        <option value="${t.name()}" ${t == p.type ? 'selected' : ''}>${t}</option>
+        <option value="${t.name()}" ${t == p.type ? 'selected' : ''}>${t.label()}</option>
       #{/list}
       </select>
 
@@ -52,7 +52,7 @@
       </select>
 
       <div class="inline">
-        <select name="p.whouseIds" style="width:150px;" id="whouse_id" multiple data-nonSelectedText="运往仓库">
+        <select name="p.whouseIds" style="width:150px;" id="whouse_id" multiple data-nonSelectedText="去往仓库">
         #{list items:whouses, as:'wh'}
           <option ${p.whouseIds.contains(wh?.id)? 'selected' : ''} value="${wh.id}">${wh.name()}</option>
         #{/list}
