--- a/core/app/views/InboundRecords/blank.html
+++ b/core/app/views/InboundRecords/blank.html
@@ -49,7 +49,7 @@
       <input type="text" name="record.fba" value="${record.fba}">
     </td>
 
-    <th>SKU</th>
+    <th>FnSKU</th>
     <td>
       <input type="text" name="record.productCode" value="${record.productCode}">
     </td>
