--- a/core/app/views/Shipments/_show_items.html
+++ b/core/app/views/Shipments/_show_items.html
@@ -10,10 +10,9 @@
 
 #{success_row title:'运输项目' /}
 <form action="@{ShipItems.adjust(ship.id, ship.id)}" method="POST" id="adjust_shipitems">
-
   <div class="row-fluid">
     <div class="span12">
-    #{render './_shipitem.html', items: ship.items, itmRecord: true, isExpress: ship.type == models.procure.Shipment.T.EXPRESS/}
+    #{render './_show_plans.html', items: ship.items, itmRecord: true,isExpress: ship.type == models.procure.Shipment.T.EXPRESS/}
     </div>
   </div>
 #{power.ck 'shipitems.adjust'}
