--- a/core/app/views/InboundRecords/blank.html
+++ b/core/app/views/InboundRecords/blank.html
@@ -51,7 +51,7 @@
 
     <th>FnSKU</th>
     <td>
-      <input type="text" name="record.productCode" value="${record.productCode}">
+      <input type="text" name="record.fnSku" value="${record.fnSku}">
     </td>
   </tr>
 
