--- a/core/app/views/OutboundRecords/blank.html
+++ b/core/app/views/OutboundRecords/blank.html
@@ -96,7 +96,7 @@
 
     <th>SKU</th>
     <td>
-      <input type="text" name="record.productCode" value="${record.productCode}">
+      <input type="text" name="record.fnSku" value="${record.fnSku}">
     </td>
   </tr>
   <tr>
