*  库存异动记录的时间控件改为 datetimepicker

--- a/core/app/views/StockRecords/index.html
+++ b/core/app/views/StockRecords/index.html
@@ -12,9 +12,9 @@
     <div class="span12">
       <div class="input-prepend input-append inline">
         <span class="add-on">From:</span>
-        <input type="date" name="p.from" value="${p.from.date()}">
+        <input type="datetime" name="p.from" value="${p.from.date()}">
         <span class="add-on">To:</span>
-        <input type="date" name="p.to" value="${p.to.date()}">
+        <input type="datetime" name="p.to" value="${p.to.date()}">
       </div>
 
       <select name="p.whouse.id" class="inline">
