*  出货计划 ID 输出错误

--- a/core/app/views/OutboundRecords/index.html
+++ b/core/app/views/OutboundRecords/index.html
@@ -138,7 +138,7 @@
           <td>${r.state.label()}</td>
           <td>
               #{if r.shipPlan != null}
-                <a href="@{ShipPlans.show(r.shipPlan)}">${r.shipPlan?.id}</a>
+                <a href="@{ShipPlans.show(r.shipPlan.id)}">${r.shipPlan.id}</a>
               #{/if}
           </td>
           <td>
