*  出货计划 => 出库计划

--- a/core/app/views/ShipPlans/blank.html
+++ b/core/app/views/ShipPlans/blank.html
@@ -1,5 +1,5 @@
 #{extends 'main.html' /}
-#{set title:'出货计划' /}
+#{set title:'出库计划' /}
 #{set 'moreScripts'}
     #{script 'shipplans/blank.coffee'/}
 #{/set}
