--- a/core/app/views/ShipPlans/index.html
+++ b/core/app/views/ShipPlans/index.html
@@ -1,5 +1,5 @@
 #{extends 'main_full.html' /}
-#{set title:"出货计划 (${plans.size()})"  /}
+#{set title:"出库计划 (${plans.size()})"  /}
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
     #{script 'shipplans/index.coffee'/}
