*  增加主箱尾箱提示

--- a/core/app/views/OutboundRecords/index.html
+++ b/core/app/views/OutboundRecords/index.html
@@ -112,18 +112,42 @@
           <th rowspan="2" style="width:160px;">备注</th>
         </tr>
         <tr>
-          <th>箱数</th>
-          <th>数量</th>
-          <th>重量</th>
-          <th>长</th>
-          <th>宽</th>
-          <th>高</th>
-          <th>箱数</th>
-          <th>数量</th>
-          <th>重量</th>
-          <th>长</th>
-          <th>宽</th>
-          <th>高</th>
+          <th>
+            <abbr title="主箱收了多少箱货">箱数</abbr>
+          </th>
+          <th>
+            <abbr title="主箱每箱有多少货">数量</abbr>
+          </th>
+          <th>
+            <abbr title="主箱每箱的重量是多少">重量(kg)</abbr>
+          </th>
+          <th>
+            <abbr title="主箱每箱长多少">长(cm)</abbr>
+          </th>
+          <th>
+            <abbr title="主箱每箱宽多少">宽(cm)</abbr>
+          </th>
+          <th>
+            <abbr title="主箱每箱高多少">高(cm)</abbr>
+          </th>
+          <th>
+            <abbr title="尾箱收了多少箱货">箱数</abbr>
+          </th>
+          <th>
+            <abbr title="尾箱每箱有多少货">数量</abbr>
+          </th>
+          <th>
+            <abbr title="尾箱每箱的重量是多少">重量(kg)</abbr>
+          </th>
+          <th>
+            <abbr title="尾箱每箱长多少">长(cm)</abbr>
+          </th>
+          <th>
+            <abbr title="尾箱每箱宽多少">宽(cm)</abbr>
+          </th>
+          <th>
+            <abbr title="尾箱每箱高多少">高(cm)</abbr>
+          </th>
         </tr>
       #{list items: records, as: 'r'}
         <tr>
