--- a/core/app/views/ReceiveRecords/index.html
+++ b/core/app/views/ReceiveRecords/index.html
@@ -112,18 +112,42 @@
           <th rowspan="2">确认人</th>
         </tr>
         <tr>
-          <td>箱数</td>
-          <td>数量</td>
-          <td>重量(kg)</td>
-          <td>长(cm)</td>
-          <td>宽(cm)</td>
-          <td>高(cm)</td>
-          <td>箱数</td>
-          <td>数量</td>
-          <td>重量(kg)</td>
-          <td>长(cm)</td>
-          <td>宽(cm)</td>
-          <td>高(cm)</td>
+          <th>
+            <abbr title="主箱收了多少箱货">箱数</abbr>
+          </th>
+          <th>
+            <abbr title="主箱每箱有多少货">数量</abbr>
+          </th>
+          <th>
+            <abbr title="主箱每箱的重量是多少">重量(kg)</abbr>
+          </th>
+          <th>
+            <abbr title="主箱每箱长多少">长(cm)</abbr>
+          </th>
+          <th>
+            <abbr title="主箱每箱宽多少">宽(cm)</abbr>
+          </th>
+          <th>
+            <abbr title="主箱每箱高多少">高(cm)</abbr>
+          </th>
+          <th>
+            <abbr title="尾箱收了多少箱货">箱数</abbr>
+          </th>
+          <th>
+            <abbr title="尾箱每箱有多少货">数量</abbr>
+          </th>
+          <th>
+            <abbr title="尾箱每箱的重量是多少">重量(kg)</abbr>
+          </th>
+          <th>
+            <abbr title="尾箱每箱长多少">长(cm)</abbr>
+          </th>
+          <th>
+            <abbr title="尾箱每箱宽多少">宽(cm)</abbr>
+          </th>
+          <th>
+            <abbr title="尾箱每箱高多少">高(cm)</abbr>
+          </th>
         </tr>
       #{list items: records, as: 'r'}
         <tr>
