*  取消出库计划的 out 属性

--- a/core/app/views/Shipments/_show_plans.html
+++ b/core/app/views/Shipments/_show_plans.html
@@ -51,7 +51,7 @@
         <td><a href="@{Sellings.selling(plan.selling?.sellingId)}" target="_blank">${plan.selling?.sellingId}</a></td>
         <td>${plan.product?.abbreviation}</td>
         <td></td>
-        <td>${plan.out?.clearanceType?.label()}</td>
+        <td>${plan.outboundRecord()?.clearanceType?.label()}</td>
         <td>${plan.whouse.name}</td>
 
         <td>${plan.fba?.shipmentId}</td>
