*  修正采购计划跳转链接错误

--- a/core/app/views/CheckTasks/checklist.html
+++ b/core/app/views/CheckTasks/checklist.html
@@ -138,7 +138,7 @@
       </td>
       <td>${task.receiveRecord?.qty}</td>
       <td>
-        <a href="/ProcureUnits/index?p.search=id:${task.units?.id}" target="_blank">
+        <a href="/ProcureUnits/index?p.search=${task.units?.id}" target="_blank">
         ${task.units?.id}
         </a>
       </td>
