解决采购计划已经分拆页面bug

--- a/core/app/views/ProcureUnits/_splitOnSelling.html
+++ b/core/app/views/ProcureUnits/_splitOnSelling.html
@@ -3,6 +3,7 @@
   <td style="width:35%;">
     <input type="text" name="newUnit.selling.sellingId" id="sellingId" style="width:300px;" value="${unit.selling?.sellingId}"
       autocomplete="off" readonly>
+    <i class="icon-ban-circle" id="del_sid"></i>
   </td>
   <th style="width:15%;">SKU</th>
   <td style="width:35%;">
