--- a/core/app/views/ShipItems/planIndex.html
+++ b/core/app/views/ShipItems/planIndex.html
@@ -1,6 +1,7 @@
 #{extends 'main_full.html' /}
 #{set title: '运输项目列表' /}
 #{set 'moreScripts'}
+    #{script 'shipitems/planIndex.coffee'/}
 #{/set}
 <script type="text/javascript">
   $(document).on('click', '#today', function(e){
@@ -26,7 +27,7 @@
       </div>
 
       <select name="p.dateType" class="inline">
-      #{list items:models.view.post.ShipItemPost.DATE_TYPES, as:'t'}
+      #{list items:models.view.post.ShipPlanPost.DATE_TYPES, as:'t'}
         <option ${t._1 == p.dateType ? 'selected' : ''} value="${t._1}">${t._2}</option>
       #{/list}
       </select>
@@ -39,25 +40,27 @@
       </select>
 
     #{select 'p.centerId', items: centers, labelProperty: 'centerId', valueProperty: 'centerId', value: p.centerId, style:'width:110px', class:'inline selectize'}
-      #{option ''}FBA Center#{/option}
+        #{option ''}FBA Center#{/option}
     #{/select}
 
-      <label class="checkbox inline">
-        <input type="checkbox" ${p.isHaveShipment ? 'checked' : ''} value="true" name="p.isHaveShipment">
-        包含运输单
-      </label>
+      <input type="hidden" value="true" name="p.isHaveNoShipment">
 
       <div class="input-prepend input-append inline">
         <span class="add-on"><i class="icon-search"></i></span>
         <input type="text" class="input-medium" name="p.search" value="${p.search}">
         <button class="btn btn-primary" data-disable-with="搜索中...">搜索</button>
       </div>
+
+      <div class="input-prepend input-append inline">
+        <input type="button" id="create_ship_btn" value="创建运输单" class="btn btn-success adjust">
+      </div>
+
     </div>
   </form>
 </div>
 
 <div class="row-fluid">
-  <form action="@{Shipments.procureUnitToShipment()}" method="POST" id="new_shipment">
+  <form action="@{Shipments.shipPlanToShipment()}" method="POST" id="new_shipment">
     <table class="table table-bordered table-condensed">
       <tr>
         <th><label><input type="checkbox" class="checkall"></label></th>
@@ -79,39 +82,31 @@
         <th>创建时间</th>
         <th>创建人</th>
       </tr>
-    #{list items: items, as:'item'}
+    #{list items: plans, as:'plan'}
       <tr>
-        <td><input type="checkbox" name="" value="${item.plan?.id}"></td>
+        <td><input type="checkbox" name="planIds" value="${plan.id}"></td>
         <td>
-          <a href="@{ShipPlans.show(item.plan?.id)}" target="_blank">${item.plan?.id}</a>
+          <a href="@{ShipPlans.show(plan.id)}" target="_blank">${plan.id}</a>
         </td>
-        <td>${item.plan?.selling?.sellingId}</td>
-        <td><a href="@{Products.show(item.plan?.product.sku)}" target="_blank">${item.plan?.product.sku}</a></td>
-        <td>${item.plan?.product.abbreviation}</td>
-        <td>${item.plan?.fba?.shipmentId}</td>
-        <td>${item.plan?.whouse?.name}</td>
-        <td>${item.plan?.fba?.fbaCenter?.centerId}</td>
-        <td>${item.plan?.planQty}/${item.plan?.qty}</td>
-        <td>#{time_tooltip time: item.plan?.planShipDate/}</td>
-        <td>#{time_tooltip time: item.plan?.planArrivDate/}</td>
-        <td style="color:${item.plan?.shipType?.rgb()}">${item.plan?.shipType?.label()}</td>
-        <td>${item.plan?.outboundRecord()?.clearanceType.label()}</td>
-        <td>${item.totalBoxNum()}</td>
-        <td>${item.totalWeight()}</td>
-        <td>${item.totalVolume()}</td>
-        <td>#{time_tooltip time: item.plan?.createDate/}</td>
-        <td>${item.plan?.creator.username}</td>
+        <td>${plan.selling?.sellingId}</td>
+        <td><a href="@{Products.show(plan.product.sku)}" target="_blank">${plan.product.sku}</a></td>
+        <td>${plan.product.abbreviation}</td>
+        <td>${plan.fba?.shipmentId}</td>
+        <td>${plan.whouse?.name}</td>
+        <td>${plan.fba?.fbaCenter?.centerId}</td>
+        <td>${plan.planQty}/${plan.qty}</td>
+        <td>#{time_tooltip time: plan.planShipDate/}</td>
+        <td>#{time_tooltip time: plan.planArrivDate/}</td>
+        <td style="color:${plan.shipType?.rgb()}">${plan.shipType?.label()}</td>
+        <td>${plan.outboundRecord()?.clearanceType?.label()}</td>
+        <td>${plan.totalBoxNum()}</td>
+        <td>${plan.totalWeight()}</td>
+        <td>${plan.totalVolume()}</td>
+        <td>#{time_tooltip time: plan.createDate/}</td>
+        <td>${plan.creator.username}</td>
       </tr>
     #{/list}
     </table>
-
-    <div>
-      <div class="btn-group">
-        <button class="btn btn-success adjust" data-confirm='确认要创建吗?' data-disable-with='创建中...'>
-          创建运输单
-        </button>
-      </div>
-    </div>
   </form>
 </div>
 
