--- a/core/app/views/Shipments/_show_plans.html
+++ b/core/app/views/Shipments/_show_plans.html
@@ -67,9 +67,9 @@
         <td>${item.adjustQty}</td>
         <td>#{time_tooltip time:plan.planShipDate/}</td>
         <td>#{time_tooltip time:plan.planArrivDate/}</td>
-        <td>${item.totalBoxNum()}</td>
-        <td>${item.totalWeight()}</td>
-        <td>${item.totalVolume()}</td>
+        <td>${plan.totalBoxNum()}</td>
+        <td>${plan.totalWeight()}</td>
+        <td>${plan.totalVolume()}</td>
         <td>${plan.creator?.username}</td>
         <td>${item.showName()}</td>
         <td>${item.lossqty}/${item.compenamt}${item.currency?.name()}</td>
